# NL-to-SPARQL

./: .gitignore  README.md  activate.py  evaluate.py  onboard.py  pyproject.toml  query.py  requirements.txt
app/: main.py
app/api/: ontology.py  router.py
app/clients/: __init__.py  fuseki.py  llm.py
app/core/: config.py
app/domain/: __init__.py  package.py
app/services/: fuseki.py  ontology.py  ontology_context.py  ontology_onboarding.py  ontology_schema_resolution.py  rag_index_service.py  rag_retrieval_service.py
app/static/: index.html
docs/architecture/: README.md  activation-flow.md  evaluation-flow.md  onboarding-flow.md  query-flow.md  system-overview.md
evaluation/: __init__.py  answer_comparison.py  dataset_builder.py  dataset_schema.py  experiment_runner.py  metrics.py
evaluation/datasets/: enovation_v1.json
evaluation/tests/: test_answer_comparison.py
infra/docker/: compose.yml
ontology_packages/: .active_package
ontology_packages/enovation/: settings.json
ontology_packages/enovation-20260427-183940-274518/: settings.json
ontology_packages/enovation-20260427-184012-632861/: settings.json
ontology_packages/enovation-20260428-112800-437213/: settings.json
ontology_packages/enovation-20260428-113159-810837/: settings.json
ontology_packages/enovation-20260428-113221-852769/: settings.json
ontology_packages/enovation-20260428-143918-407373/: settings.json
ontology_packages/enovation-20260429-090134-362794/: settings.json
tests/: faiss_smoke_test.py  query_prompt_generation_smoke_test.py  test_config_pipeline.py
(+51 files in other folders)
