[project]
name = "nl-to-sparql"
version = "0.1.0"
description = "FastAPI service for NL-to-SPARQL."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"